force-app/main/default/objects/Scorecard__c/Scorecard__c.object-meta.xml
<CustomObject>
    <label>Lead Scoring Criteria</label>
    <nameField>
        <label>Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>