force-app/main/default/objects/Scorecard__c/fields/Evaluation_Expression_For_Execution__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Expression_For_Execution__c</fullName>
    <label>Evaluation Expression For Execution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>