force-app/main/default/objects/Scorecard__c/fields/Roll_Up_Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Summary_Field__c</fullName>
    <label>Roll Up Summary Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>