force-app/main/default/objects/Scorecard__c/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard</label>
    <referenceTo>Scorecard__c</referenceTo>
    <relationshipName>Scorecard</relationshipName>
    <type>Lookup</type>
</CustomField>