force-app/main/default/objects/Scorecard__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>