force-app/main/default/objects/Scorecard__c/fields/Use_Input_as_Score__c.field-meta.xml
<CustomField>
    <fullName>Use_Input_as_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Input as Score</label>
    <type>Checkbox</type>
</CustomField>